[gd_scene load_steps=12 format=3 uid="uid://b21silibtmbth"]

[ext_resource type="Shader" uid="uid://e12lig0d16ir" path="res://Scripts/menu.gdshader" id="1_emv3i"]
[ext_resource type="Script" uid="uid://dyfjlxy8rvwqp" path="res://Scripts/game_over_menu.gd" id="1_k0w1u"]
[ext_resource type="StyleBox" uid="uid://di2jc14nf4ern" path="res://Assets/Styles/MenuPanel.tres" id="3_5wj54"]
[ext_resource type="FontFile" uid="uid://bc61b6ehals1e" path="res://Assets/KRONIKA_.ttf" id="3_k0ui4"]
[ext_resource type="StyleBox" uid="uid://b10p4sv3p8kkj" path="res://Assets/Styles/button.tres" id="4_36st3"]
[ext_resource type="StyleBox" uid="uid://twttl4rba3gt" path="res://Assets/Styles/hoverbutton.tres" id="5_5wj54"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k0w1u"]
shader = ExtResource("1_emv3i")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_bpi0q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3ffyl"]
resource_name = "editing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1och7"]
resource_name = "menu_blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1.0717735),
"update": 0,
"values": [0.0, 3.1210001482475]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vmyb1"]
_data = {
&"RESET": SubResource("Animation_bpi0q"),
&"editing": SubResource("Animation_3ffyl"),
&"menu_blur": SubResource("Animation_1och7")
}

[node name="GameOverMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k0w1u")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_k0w1u")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.0
offset_top = -295.0
offset_right = 237.0
offset_bottom = 282.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_5wj54")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 70
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_k0ui4")
theme_override_font_sizes/font_size = 40
text = "You died :("
horizontal_alignment = 1

[node name="DistanceLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_k0ui4")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_k0ui4")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("4_36st3")
theme_override_styles/hover = ExtResource("5_5wj54")
text = " Restart "

[node name="Exit Game" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_k0ui4")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("4_36st3")
theme_override_styles/hover = ExtResource("5_5wj54")
text = " Exit Game "

[node name="GameOverAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vmyb1")
}

[connection signal="button_down" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_button_down"]
[connection signal="button_down" from="PanelContainer/VBoxContainer/Exit Game" to="." method="_on_exit_game_button_down"]
